# SyntheticResponderLab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  render.yaml
Documentation/: audit-edit.md  (+12 more)
apps/api/: .env.example  Dockerfile  alembic.ini  local-dev.db-journal  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_thin_slice.py  0002_usage_counters.py
apps/api/demo_data/prototype/: interview_themes.json  interview_transcripts.csv
apps/api/legacy_runtime/Provided Info/: Neo Smart Living — Survey_HighMedPriority.md  Neo Smart Living — Survey_HighPriority.md
apps/api/legacy_runtime/backend/: __init__.py  config.py  fixtures.py  presets.py  schemas.py  scraper.py  storage.py  vision.py  workflow.py
apps/api/scripts/: backfill_study_owners.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/: app.py  auth.py  dependencies.py  errors.py  health.py  studies.py
apps/api/src/config/: settings.py
apps/api/src/persistence/: models.py  session.py  storage.py
apps/api/src/schemas/: common.py  health.py  study.py  workflow.py
apps/api/src/services/: demo_interview_fixtures.py  exceptions.py  health_service.py  ids.py  interview_service.py  study_service.py  url_security.py  usage_limits.py  workflow_service.py
apps/api/synthetic_responder_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_auth_dependency.py  test_health.py  test_legacy_live_simulation.py  test_persona_ml_completion.py  test_serializer.py  test_settings.py  test_studies_endpoints.py  test_usage_limits.py
(+137 files in other folders)
