[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-responder-api"
version = "0.1.0"
description = "Thin-slice Python backend for SyntheticResponderLab"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "cryptography>=43.0.0",
  "python-docx>=1.1.2",
  "pypdf>=4.2.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
